# Daheng-SDK-repackage

./: .gitignore  CMakeLists.txt  README.md  Video.sln  Video.vcxproj  Video.vcxproj.filters  main.cpp  mainPC.cpp  mainPC.h  setting.xml  video.cpp  video.h
